Доработка health
